tests/test_enum/bad/output/too_many_cases.catala_en.A.Interpret
[ERROR] This case matches a constructor of enumeration E but previous case were matching constructors of enumeration F

  --> tests/test_enum/bad/too_many_cases.catala_en
   | 
21 |     -- Case4 : true
   |        ^^^^^^^^^^^^
   + Article
